layout heroes finish

--- a/src/app/heroes/pages/layout-page/layout-page.component.html
+++ b/src/app/heroes/pages/layout-page/layout-page.component.html
@@ -7,6 +7,17 @@
         <mat-icon>menu</mat-icon>
       </button>
     </mat-toolbar>
+
+    <mat-nav-list>
+      <mat-list-item
+      *ngFor="let item of sidebarItems"
+      [routerLink]="item.url"
+      (click)="sidenav.toggle()"
+      >
+      <mat-icon matListItemIcon>{{item.icon}}</mat-icon>
+      {{item.label}}
+      </mat-list-item>
+    </mat-nav-list>
   </mat-sidenav>
 
   <mat-toolbar color="primary">
@@ -18,6 +29,7 @@
     <button mat-button>
       Logout
     </button>
+
   </mat-toolbar>
   <div class="container">
     <router-outlet></router-outlet>
