--- a/src/styles.css
+++ b/src/styles.css
@@ -6,3 +6,8 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .style{
   flex:1 1 auto;
 }
+
+.space-between{
+  display: flex;
+  justify-content: space-between;
+}
