--- a/src/app/heroes/pages/hero-page/hero-page.component.html
+++ b/src/app/heroes/pages/hero-page/hero-page.component.html
@@ -1,1 +1,75 @@
-<p>hero-page works!</p>
+<h1>
+  Editar/Agergar Heroe
+  <small>Superman</small>
+</h1>
+<mat-divider class="mb-2"></mat-divider>
+<div class="gird">
+  <div class="col-12 sm:col6">
+   <mat-card>
+      <mat-card-content>
+        <div class="grid">
+          <mat-form-field class="col-12 sm:col-6">
+            <mat-label>Super heroe</mat-label>
+            <input
+            matInput
+            type="text"
+            required="">
+          </mat-form-field>
+
+          <mat-form-field class="col-12 sm:col-6">
+            <mat-label>Alter Hego</mat-label>
+            <input
+            matInput
+            type="text"
+            required="">
+          </mat-form-field>
+
+           <mat-form-field class="col-12 sm:col-6">
+            <mat-label>Primera aparicion</mat-label>
+            <input
+            matInput
+            type="text"
+            required="">
+          </mat-form-field>
+
+          <mat-form-field class="col-12 sm:col-6">
+            <mat-label>Personajes</mat-label>
+            <input
+            matInput
+            type="text"
+            required="">
+          </mat-form-field>
+
+          <mat-form-field class="col-12 sm:col-6">
+            <mat-label>Creador</mat-label>
+              <mat-select required="">
+                <mat-option *ngFor="let publisher of publishers"
+                [value]="publisher.id">
+                {{publisher.desc}}
+                </mat-option>
+              </mat-select>
+          </mat-form-field>
+
+       </div>
+
+      <div class="flex justify-content-between">
+        <button mat-flat-button color="warn">
+          Borrrar
+         </button>
+
+         <button mat-flat-button color="primary">
+          <mat-icon>save</mat-icon>
+          Guardar
+         </button>
+      </div>
+
+      </mat-card-content>
+    </mat-card>
+  </div>
+  <div class="col-12 sm:col-6">
+    <mat-card>
+      <img src="" alt="Imagen del heroe">
+    </mat-card>
+  </div>
+
+</div>
