CRUD Complete and terminataed the forms

--- a/src/app/heroes/pages/hero-page/hero-page.component.html
+++ b/src/app/heroes/pages/hero-page/hero-page.component.html
@@ -1,48 +1,59 @@
 <h1>
-  Editar/Agergar Heroe
-  <small>Superman</small>
+ {{currentHero.id ? 'Editar' : 'Agregar'}}
+  <small>heroe</small>
 </h1>
 <mat-divider class="mb-2"></mat-divider>
-<div class="gird">
-  <div class="col-12 sm:col6">
+<div class="grid">
+  <div class="col-12 sm:col-6">
    <mat-card>
       <mat-card-content>
-        <div class="grid">
+        <form class="grid" [formGroup]="heroForm" (ngSubmit)="onSubmit()">
           <mat-form-field class="col-12 sm:col-6">
             <mat-label>Super heroe</mat-label>
             <input
-            matInput
-            type="text"
-            required="">
+              matInput
+              type="text"
+              required
+              formControlName ="superhero"
+            />
           </mat-form-field>
 
           <mat-form-field class="col-12 sm:col-6">
             <mat-label>Alter Hego</mat-label>
             <input
-            matInput
-            type="text"
-            required="">
+              matInput
+              type="text"
+              required
+              formControlName ="alter_ego"
+            />
           </mat-form-field>
 
-           <mat-form-field class="col-12 sm:col-6">
+           <mat-form-field class="col-12">
             <mat-label>Primera aparicion</mat-label>
             <input
-            matInput
-            type="text"
-            required="">
+              matInput
+              type="text"
+              required
+              formControlName ="first_appearance"
+            />
           </mat-form-field>
 
-          <mat-form-field class="col-12 sm:col-6">
+          <mat-form-field class="col-12">
             <mat-label>Personajes</mat-label>
             <input
-            matInput
-            type="text"
-            required="">
+              matInput
+              type="text"
+              required
+              formControlName ="characters"
+            />
           </mat-form-field>
 
-          <mat-form-field class="col-12 sm:col-6">
+          <mat-form-field class="col-12">
             <mat-label>Creador</mat-label>
-              <mat-select required="">
+              <mat-select
+                formControlName ="publisher"
+                required
+              >
                 <mat-option *ngFor="let publisher of publishers"
                 [value]="publisher.id">
                 {{publisher.desc}}
@@ -50,14 +61,24 @@
               </mat-select>
           </mat-form-field>
 
-       </div>
+          <mat-form-field class="col-12">
+            <mat-label>imagen alternativa</mat-label>
+            <input
+              matInput
+              type="text"
+              formControlName ="alt_img"
+            />
+          </mat-form-field>
+
+       </form>
 
       <div class="flex justify-content-between">
-        <button mat-flat-button color="warn">
+        <button mat-flat-button color="warn" *ngIf="currentHero.id" (click)="onDeleteHero()">
           Borrrar
          </button>
+         <span></span>
 
-         <button mat-flat-button color="primary">
+         <button mat-flat-button color="primary" (click)="onSubmit()">
           <mat-icon>save</mat-icon>
           Guardar
          </button>
@@ -68,7 +89,7 @@
   </div>
   <div class="col-12 sm:col-6">
     <mat-card>
-      <img src="" alt="Imagen del heroe">
+      <img [src]="currentHero | heroImage" alt="Imagen del heroe">
     </mat-card>
   </div>
 
