--- a/src/app/heroes/pages/layout-page/layout-page.component.html
+++ b/src/app/heroes/pages/layout-page/layout-page.component.html
@@ -26,7 +26,8 @@
     </button>
 
     <span class="spacer"></span>
-    <button mat-button>
+    <span>{{user?.user}}</span>
+    <button mat-button (click)="onLogout()">
       Logout
     </button>
 
